fix: component collapse/expand button

--- a/admin-base/materialize/custom/_editor-panel.scss
+++ b/admin-base/materialize/custom/_editor-panel.scss
@@ -44,4 +44,8 @@
             width: 100%;
         }
     }
+
+    &.collapsed {
+        overflow: unset;
+    }
 }
