--- a/admin-base/materialize/custom/_workspace.scss
+++ b/admin-base/materialize/custom/_workspace.scss
@@ -285,8 +285,7 @@
     height: 40px;
     position: absolute;
     z-index: 1;
-    right: 0;
-    top: 3rem;
+    right: -10px;
     border: 1px solid color("blue-grey", "lighten-4");
     border-right: 0;
 
